--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.data.mongodb.connect-timeout=5000
 logging.level.org.springframework.data.mongodb.core=DEBUG
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
+
+immobillier.app.jwtSecret= ======================BezKoder=Spring===========================
+immobillier.app.jwtExpirationMs= 86400000
+
