better image management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ logging.level.org.springframework.data.mongodb.core=DEBUG
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
 
-immobillier.app.jwtSecret= ======================BezKoder=Spring===========================
-immobillier.app.jwtExpirationMs= 86400000
+immobilier.app.jwtSecret= ======================BezKoder=Spring===========================
+immobilier.app.jwtExpirationMs= 86400000
 
+immobilier.app.uploadPath=C:\\Users\\Amna\\Desktop\\ProjetWeb\\images\\
