--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.data.mongodb.connect-timeout=5000
 
 logging.level.org.springframework.data.mongodb.core=DEBUG
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
-
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
 
 immobilier.app.jwtSecret= ======================BezKoder=Spring===========================
 immobilier.app.jwtExpirationMs= 86400000
